[workspace]
resolver = "3"
members = ["crates/poholos", "crates/poholos-cli", "crates/poholos-morse"]
# The firmware crates are their own workspaces: they cross-compile for a
# bare-metal target and must not join the host workspace build.
exclude = ["crates/poholos-microbit", "crates/poholos-microbit-morse"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
# Default for the workspace's app crates; the `poholos` core overrides this to
# "MIT OR Apache-2.0" (see crates/poholos/Cargo.toml).
license = "AGPL-3.0-only"
homepage = "https://poholos.com"
repository = "https://github.com/poholos/poholos"
keywords = ["mesh", "bluetooth", "ble", "p2p", "chat"]
categories = ["network-programming", "embedded", "no-std"]

# Lint configuration per M-STATIC-VERIFICATION (Pragmatic Rust Guidelines).
# Crates opt in via `[lints] workspace = true`.
[workspace.lints.rust]
ambiguous_negative_literals = "warn"
missing_debug_implementations = "warn"
redundant_imports = "warn"
redundant_lifetimes = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_lifetimes = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Selected `restriction` lints
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

# May cause issues with structured logging otherwise.
literal_string_with_formatting_args = "allow"
