[package]
name = "poholos-microbit"
description = "Poholos mesh relay firmware for the BBC micro:bit v2 (nRF52833)."
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
license = "AGPL-3.0-only"
publish = false

# Standalone workspace: this crate cross-compiles for thumbv7em-none-eabihf
# (see .cargo/config.toml) and must not join the host workspace build; the
# root Cargo.toml excludes it.
[workspace]

[dependencies]
poholos = { path = "../poholos", default-features = false }

# Board support, used for its async LED-matrix driver only. We do NOT use
# `Microbit::new()` or the BSP's `trouble` feature: its BLE builder
# hardcodes advertising+peripheral with no scan support, and poholos
# needs the observer role too. The radio bring-up lives in src/radio.rs.
microbit-bsp = "0.4.0"

# Embassy versions aligned with microbit-bsp 0.4.0's dependency set.
# embassy-nrf is a direct dependency for board init, GPIO, RNG, and
# the PAC (FICR identity); the feature set extends the BSP's with rt +
# unstable-pac, which the radio stack needs.
embassy-nrf = { version = "0.4.1", features = [
    "nrf52833",
    "gpiote",
    "time-driver-rtc1",
    "time",
    "rt",
    "unstable-pac",
    "defmt",
] }
embassy-executor = { version = "0.7", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    # The main task's future carries the trouble HostResources 
    # (a ~5 KiB packet pool) plus the BLE host futures, so the default 
    # 4 KiB arena overflows at the first spawn. 32 KiB leaves slack; 
    # ~110 KiB of RAM is otherwise unused.
    "task-arena-size-32768",
] }
embassy-time = "0.4"
embassy-sync = "0.7"
embassy-futures = "0.1"

# BLE: Nordic SoftDevice Controller (links into the image, no separate
# flashing) driven by the trouble host stack. Version pairing matters:
# nrf-sdc 0.1.1 and trouble-host 0.2.4 both speak bt-hci 0.3 and use
# embassy-nrf 0.4.1, matching the BSP.
nrf-sdc = { version = "0.1.1", default-features = false, features = [
    "defmt",
    "peripheral",
    "central",
    "nrf52833",
] }
# nrf-mpsl's critical-section-impl is the global critical-section
# provider (do not also enable cortex-m's critical-section-single-core).
nrf-mpsl = { version = "0.1", default-features = false, features = [
    "defmt",
    "critical-section-impl",
] }
trouble-host = { version = "0.2.4", features = ["defmt", "scan"] }
# Advertising-report parameter types used by the scan event handler.
bt-hci = { version = "0.3", default-features = false }

cortex-m = "0.7"
cortex-m-rt = "0.7"
heapless = "0.9"
static_cell = "2"

# Logging over RTT through the onboard debug probe.
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

# Flash-friendly profiles; debug info never reaches the chip.
[profile.release]
debug = 2
lto = "fat"
opt-level = "s"

[profile.dev]
debug = 2
opt-level = 1
